--- a/src/App.css
+++ b/src/App.css
@@ -104,6 +104,7 @@ button{
   display: flex;
   margin: 1em 0;
   box-shadow: 0 0 0.2em 0.1em rgba(0,0,0,0.2);
+  max-height: 250px;
 }
 
 .nomineeMovie img{
